kubernetes/dev/00-namespace.yaml
# Namespace Kubernetes pour l'environnement de développement (PostgreSQL)
apiVersion: v1
kind: Namespace
metadata:
  name: dev
