kubernetes/dev/05-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: dev
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
